# softrenderer

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mini  mini.c  profile.prof  softrender
resources/: box.dae
src/: light.cpp  light.hpp  main.cpp  render.cpp  render.hpp  scene.hpp  triangles.cpp  triangles.hpp
